replaced mongo with PostgreSQL for task-service

--- a/.env
+++ b/.env
@@ -15,3 +15,9 @@ GATEWAY_PORT=8080
 USER_SERVICE_URL=http://user-service:3001
 TASK_SERVICE_URL=http://task-service:3002
 NOTIF_SERVICE_URL=http://notification-service:3003
+
+# === PostgreSQL Database ===
+POSTGRES_PASSWORD=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=tasksdb
+POSTGRES_URL= postgresql://postgres:postgres@postgres_db:5432/tasksdb
